# investment-data

./: .gitignore  README.md  data-indexer.py  env.template  main.py  pyproject.toml  search.py
scrapers/: __init__.py  motleyfool.py  scraper.py  seekingalpha.py
tests/: test_motleyfool.py  test_seekingalpha.py
